--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/earlman/me/issues"
   },
-  "homepage": "https://github.com/earlman/me#readme"
+  "homepage": "https://github.com/earlman/me#readme",
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "vuepress": "^1.2.0"
+  }
 }
