--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:docs": "vuepress dev docs"
+    "start:docs": "vuepress dev docs",
+    "build:docs": "vuepress build docs"
   },
   "repository": {
     "type": "git",
