--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "earlman.me",
   "version": "1.0.0",
   "description": "Just a blog about me",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:docs": "vuepress dev docs",
     "build:docs": "vuepress build docs"
   },
+  "private": true,
+  "workspaces": ["docs", "server", "site"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/earlman/me.git"
