--- a/site/package.json
+++ b/site/package.json
@@ -1,5 +1,7 @@
 {
   "name": "@earlman.me/site",
   "version": "0.0.1",
-  "dependencies": {}
+  "dependencies": {
+    "gridsome": "^0.7.11"
+  }
 }
