--- a/site/package.json
+++ b/site/package.json
@@ -13,5 +13,8 @@
         "sass-loader": "7.*",
         "typeface-merriweather": "^0.0.72",
         "typeface-open-sans": "^0.0.75"
+    },
+    "devDependencies": {
+        "style-resources-loader": "^1.3.3"
     }
 }
