--- a/site/package.json
+++ b/site/package.json
@@ -8,6 +8,8 @@
         "explore": "gridsome explore"
     },
     "dependencies": {
+        "@gridsome/source-filesystem": "^0.6.2",
+        "@gridsome/transformer-remark": "^0.4.0",
         "gridsome": "^0.7.11",
         "sass": "^1.24.0",
         "sass-loader": "7.*",
