--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
         "typeface-open-sans": "^0.0.75"
     },
     "devDependencies": {
+        "moment": "^2.24.0",
         "style-resources-loader": "^1.3.3"
     }
 }
