fix(site): add core-js@2.6.11 to root dir to allow for storybook

--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
         "commitizen": {
             "path": "node_modules/cz-customizable"
         }
+    },
+    "dependencies": {
+        "core-js": "2.6.11"
     }
 }
