--- a/site/package.json
+++ b/site/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@gridsome/source-filesystem": "^0.6.2",
         "@gridsome/transformer-remark": "^0.4.0",
+        "@storybook/vue": "^5.2.8",
         "gridsome": "^0.7.11",
         "sass": "^1.24.0",
         "sass-loader": "7.*",
