--- a/site/package.json
+++ b/site/package.json
@@ -12,9 +12,11 @@
         "@gridsome/source-filesystem": "^0.6.2",
         "@gridsome/transformer-remark": "^0.4.0",
         "@storybook/vue": "^5.2.8",
+        "cheerio": "^1.0.0-rc.3",
         "gridsome": "^0.7.11",
         "sass": "^1.24.0",
         "sass-loader": "7.*",
+        "truncate-html": "^1.0.3",
         "typeface-merriweather": "^0.0.72",
         "typeface-open-sans": "^0.0.75"
     },
