--- a/site/package.json
+++ b/site/package.json
@@ -14,6 +14,7 @@
         "@storybook/vue": "^5.2.8",
         "cheerio": "^1.0.0-rc.3",
         "gridsome": "^0.7.11",
+        "remark-containers": "^1.1.2",
         "sass": "^1.24.0",
         "sass-loader": "7.*",
         "truncate-html": "^1.0.3",
