--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "@earlman.me/docs",
-  "version": "0.0.1",
-  "dependencies": {
-    "vuepress": "^1.2.0"
-  }
+    "name": "@earlman.me/docs",
+    "version": "0.0.1",
+    "scripts": {
+        "start": "vuepress dev .",
+        "docs:dev": "vuepress dev .",
+        "docs:build": "vuepress build ."
+    },
+    "dependencies": {
+        "vuepress": "^1.2.0"
+    }
 }
