--- a/site/package.json
+++ b/site/package.json
@@ -9,12 +9,11 @@
         "storybook": "start-storybook -p 6006 -s public"
     },
     "dependencies": {
+        "@gridsome/cli": "^0.3.1",
         "@gridsome/source-filesystem": "^0.6.2",
-        "@gridsome/transformer-remark": "^0.4.0",
-        "@storybook/vue": "^5.2.8",
+        "@gridsome/transformer-remark": "^0.5.0",
         "cheerio": "^1.0.0-rc.3",
-        "core-js": "2.6.11",
-        "gridsome": "^0.7.11",
+        "gridsome": "^0.7.13",
         "remark-containers": "^1.1.2",
         "sass": "^1.24.0",
         "sass-loader": "7.*",
