--- a/site/package.json
+++ b/site/package.json
@@ -14,6 +14,7 @@
         "@gridsome/transformer-remark": "^0.5.0",
         "cheerio": "^1.0.0-rc.3",
         "gridsome": "^0.7.13",
+        "gridsome-plugin-remark-container": "^0.1.3",
         "remark-containers": "^1.1.2",
         "sass": "^1.24.0",
         "sass-loader": "7.*",
