--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,7 @@
         "@gridsome/cli": "^0.3.1",
         "@gridsome/source-filesystem": "^0.6.2",
         "@gridsome/transformer-remark": "^0.5.0",
+        "axios": "^0.19.2",
         "cheerio": "^1.0.0-rc.3",
         "gridsome": "^0.7.13",
         "gridsome-plugin-remark-container": "^0.1.3",
@@ -20,6 +21,7 @@
         "remark-containers": "^1.1.2",
         "sass": "^1.24.0",
         "sass-loader": "7.*",
+        "stripe": "^8.49.0",
         "truncate-html": "^1.0.3",
         "typeface-merriweather": "^0.0.72",
         "typeface-open-sans": "^0.0.75"
