--- a/site/package.json
+++ b/site/package.json
@@ -32,6 +32,7 @@
     "devDependencies": {
         "moment": "^2.24.0",
         "netlify-cli": "^2.48.0",
-        "style-resources-loader": "^1.3.3"
+        "style-resources-loader": "^1.3.3",
+        "vue-svg-loader": "^0.16.0"
     }
 }
