--- a/site/package.json
+++ b/site/package.json
@@ -12,6 +12,8 @@
         "@gridsome/cli": "^0.3.1",
         "@gridsome/source-filesystem": "^0.6.2",
         "@gridsome/transformer-remark": "^0.5.0",
+        "@zefman/gridsome-source-instagram": "^0.1.3",
+        "axios": "^0.19.2",
         "cheerio": "^1.0.0-rc.3",
         "gridsome": "^0.7.13",
         "remark-containers": "^1.1.2",
