--- a/site/package.json
+++ b/site/package.json
@@ -15,6 +15,7 @@
         "@zefman/gridsome-source-instagram": "^0.1.3",
         "axios": "^0.19.2",
         "cheerio": "^1.0.0-rc.3",
+        "commitizen": "^4.0.3",
         "gridsome": "^0.7.13",
         "remark-containers": "^1.1.2",
         "sass": "^1.24.0",
