--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
         "cheerio": "^1.0.0-rc.3",
         "commitizen": "^4.0.3",
         "gridsome": "^0.7.13",
+        "gridsome-plugin-remark-container": "^0.1.3",
         "remark-containers": "^1.1.2",
         "sass": "^1.24.0",
         "sass-loader": "7.*",
