--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
         "@gridsome/transformer-remark": "^0.5.0",
         "axios": "^0.19.2",
         "cheerio": "^1.0.0-rc.3",
+        "commitizen": "^4.0.3",
         "gridsome": "^0.7.13",
         "gridsome-plugin-remark-container": "^0.1.3",
         "netlify-lambda": "^1.6.3",
